# browser-recall

./: .env  .env.example  .gitignore  README.md  browser-recall.service  database.py  main.py  page-reader.py  pyproject.toml  requirements.txt  run-browser-recall.fish  run-browser-recall.sh  terminal
app/: browser.py  config.py  config.yaml  database.py  logging_config.py  main.py  page_info.py  page_reader.py  scheduler.py  utils.py  websocket_server.py
app/routers/: bookmarks.py  config.py  history.py  ui.py  websocket.py
app/static/css/: main.css
app/templates/: base.html  bookmarks.html  index.html  search.html
config/: history_config.yaml  reader_config.yaml
extension/: background.js  content.js  manifest.json
extension/web-ext-artifacts/: helper-extension-v1.xpi
src/: base_crawler.py  database.py  domain_exclusions.py  logger.py  main.py
